# Homework_cpp_2

./: README.md
Course 2 OOP/Exercies_1/: CMakeLists.txt  main.cpp
Course 2 OOP/Homework_1/: CMakeLists.txt  MatArr.cpp  MatArr.h  MyMatrix.cpp  MyMatrix.h  main.cpp
Course 2 OOP/Homework_2/: CMakeLists.txt  Names.cpp  Names.h  main.cpp
Course 2 OOP/Homework_3/: CMakeLists.txt  College.cpp  College.h  Course.cpp  Course.h  Student.h  Student0.cpp  Student0.h  Student1.cpp  Student1.h  Student2.cpp  Student2.h  main.cpp
