cmake_minimum_required(VERSION 3.29)
project(Homework_3)

set(CMAKE_CXX_STANDARD 20)

add_executable(Homework_3 main.cpp
        Course.h
        Student.h
        Student0.cpp
        Student0.h
        Student1.cpp
        Student1.h
        Student2.cpp
        Student2.h
        College.cpp
        College.h
        Course.cpp
)
